WAM-Studio-SF-Build/force-app/main/default/objects/Risk_Signal__c/Risk_Signal__c.object-meta.xml
<CustomObject>
    <description>Risk/anomaly signal for a client or portfolio. Part of Salesforce Wealth AI Studio.</description>
    <label>Risk Signal</label>
    <nameField>
        <displayFormat>RSK-{00000}</displayFormat>
        <label>Risk Signal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Signals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>