WAM-Studio-SF-Build/force-app/main/default/objects/Risk_Signal__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Risk Signals</relationshipLabel>
    <relationshipName>Risk_Signals</relationshipName>
    <type>Lookup</type>
</CustomField>