WAM-Studio-SF-Build/force-app/main/default/objects/Risk_Signal__c/fields/Signal_Type__c.field-meta.xml
<CustomField>
    <fullName>Signal_Type__c</fullName>
    <label>Signal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Drift</fullName>
                <default>true</default>
                <label>Drift</label>
            </value>
            <value>
                <fullName>Concentration</fullName>
            </value>
            <value>
                <fullName>Volatility</fullName>
            </value>
            <value>
                <fullName>Suitability</fullName>
            </value>
            <value>
                <fullName>Attrition</fullName>
            </value>
            <value>
                <fullName>Cash Movement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>