WAM-Studio-SF-Build/force-app/main/default/objects/Risk_Signal__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>